refactor : 원시값 포장을 사용하여 로또 번호 관련 부분 int값을 LottoNumber로 포장